- earthquake app added, updated.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ben Enes Yıldırım - Portföy</title>
+  <title>BenEnesYıldırım</title>
   <style>
     html, body {
       height: 100%;
@@ -211,6 +211,20 @@
         <h3>The Real Bond</h3>
         <p>A game for calculating The Real Bond with your friends.</p>
         <a href="https://play.google.com/store/apps/details?id=com.benenesyildirim.realbond" target="_blank" rel="noopener noreferrer">
+          See on Google Play Store
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+    <div class="app-card">
+      <img class="app-icon" src="https://play-lh.googleusercontent.com/mhDFkkt5WgvduxikIQ3i_MHdTm9yni3eXUjshbTUkhwNozSciKriYWSJOZX2Lrrleo8=w240-h480" alt="Earthquake Risk Calculator Uygulama İkonu" />
+      <div class="app-info">
+        <h3>The Real Bond</h3>
+        <p>A game for calculating The Real Bond with your friends.</p>
+        <a href="https://play.google.com/store/apps/details?id=org.enesyildirim.earthquaike" target="_blank" rel="noopener noreferrer">
           See on Google Play Store
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/>
