- earthquake app added, updated.

--- a/index.html
+++ b/index.html
@@ -205,26 +205,26 @@
   </section>
 
     <section class="apps-list" aria-label="Uygulamalar">
-    <div class="app-card">
+      <div class="app-card">
+        <img class="app-icon" src="https://play-lh.googleusercontent.com/mhDFkkt5WgvduxikIQ3i_MHdTm9yni3eXUjshbTUkhwNozSciKriYWSJOZX2Lrrleo8=w240-h480" alt="Earthquake Risk Calculator Uygulama İkonu" />
+        <div class="app-info">
+          <h3>Earthquake Risk Calculator</h3>
+          <p>An app to calculate locations earhtquake risk.</p>
+          <a href="https://play.google.com/store/apps/details?id=org.enesyildirim.earthquaike" target="_blank" rel="noopener noreferrer">
+            See on Google Play Store
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+              <path d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="app-card">
       <img class="app-icon" src="https://play-lh.googleusercontent.com/cEA0dYpZsfIRetlA1o_sJuvhaUoyAJjIoe0XWL99ARI_YyWcjC6dqXpsDYwUg1fVYA=w240-h480" alt="Real Bond Uygulama İkonu" />
       <div class="app-info">
         <h3>The Real Bond</h3>
         <p>A game for calculating The Real Bond with your friends.</p>
         <a href="https://play.google.com/store/apps/details?id=com.benenesyildirim.realbond" target="_blank" rel="noopener noreferrer">
-          See on Google Play Store
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <path d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/>
-          </svg>
-        </a>
-      </div>
-    </div>
-
-    <div class="app-card">
-      <img class="app-icon" src="https://play-lh.googleusercontent.com/mhDFkkt5WgvduxikIQ3i_MHdTm9yni3eXUjshbTUkhwNozSciKriYWSJOZX2Lrrleo8=w240-h480" alt="Earthquake Risk Calculator Uygulama İkonu" />
-      <div class="app-info">
-        <h3>The Real Bond</h3>
-        <p>A game for calculating The Real Bond with your friends.</p>
-        <a href="https://play.google.com/store/apps/details?id=org.enesyildirim.earthquaike" target="_blank" rel="noopener noreferrer">
           See on Google Play Store
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/>
